| Bug #6878 | Crash with engine=memory | ||
|---|---|---|---|
| Submitted: | 29 Nov 2004 16:26 | Modified: | 2 Dec 2004 11:16 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 4.0.23 | OS: | Linux (SuSE 8.2) |
| Assigned to: | Ramil Kalimullin | CPU Architecture: | Any |
[29 Nov 2004 17:07]
MySQL Verification Team
Thank you for the bug report I was able to repeat on latest Bk source server.
[30 Nov 2004 12:12]
Ramil Kalimullin
drop table if exists fh;
create table fh (s1 char(2)) engine=memory;
insert into fh values (NULL), (NULL);
delete from fh where s1 is null;
insert into fh values (''), ('');
[30 Nov 2004 12:22]
Ramil Kalimullin
The bug appears only in case of char(*2*) field type.
[2 Dec 2004 11:16]
Ramil Kalimullin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
fixed in 4.0.23 and 4.1.8

Description: With engine=memory (only), some time after deleting two rows with NULLs, an INSERT statement crashes the server. How to repeat: mysql> create table fh (s1 char(2)) engine=memory; Query OK, 0 rows affected (0.67 sec) mysql> insert into fh values ('b6'),(NULL),(NULL); Query OK, 3 rows affected (0.00 sec) Records: 3 Duplicates: 0 Warnings: 0 mysql> delete from fh where s1 is null; Query OK, 2 rows affected (0.00 sec) mysql> insert into fh values ('b6'); Query OK, 1 row affected (0.00 sec) mysql> insert into fh values (''); ERROR 2013 (HY000): Lost connection to MySQL server during query