A fix (bug #6878: Crash with engine=memory).

heap/hp_open.c:
  A fix (bug #6878: Crash with engine=memory).
  Record length should be >= sizeof(byte*).